Fix Prism code display
The extra padding is added by Foundation, but it doesn't look very
good when used with Prism. This eleminates that padding.

--- a/assets/scss/layouts/_general.scss
+++ b/assets/scss/layouts/_general.scss
@@ -26,3 +26,7 @@ blockquote > p {
     margin: rem-calc( 0 10 0 -30);
   }
 }
+
+code {
+  padding: 0;
+}
